# inkshelf

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  inkshelf-build-wifi.sh  inkshelf-build.sh  inkshelf-deploy-wifi.sh
cmake/: toolchain-arm-obreey.cmake
src/: app.c  app.h  config.c  config.h  download.c  download.h  http.c  http.h  httpd.c  httpd.h  library.c  library.h  main.c  net.c  net.h  opds.c  opds.h  opds_ui.c  screens.c  screens.h  ui.c  ui.h  wifi_drop_ui.c  xml.c  xml.h
tests/: host_stubs.c  run_host_tests.sh  test_httpd.c  test_opds.c  test_ui.c
